Slow GPU bake and blown out baking cycles render #46207

Closed
opened 2015-09-22 12:00:12 +02:00 by Delo Lat · 12 comments

System Information
Card name: AMD Radeon (TM) R9 Fury Series
Card name: AMD FirePro W8100 (FireGL V)
Operating System: Windows Embedded 8.1 Industry Pro 64-bit (6.3, Build 9600) (9600.winblue_ltsb.150715-0840)
Processor: Intel(R) Core(TM) i7-5820K CPU @ 3.30GHz (12 CPUs), ~3.3GHz
Memory: 32768MB RAM

Blender Version
Broken: 2.7.6rc1 and 2.7.5.4

Short description of error
When baking in GPU compute am receiving blown out Ambient Occlusion and Normal maps. Works fine in CPU.
when baked with CPU: http://snag.gy/BlvA7.jpg
when baked with GPU: http://snag.gy/SsJI3.jpg

Exact steps for others to reproduce the error
Switch mode to cycles render. Add Suzanne smart uv unwrap her. Add image texture in node editor, and create and use a texture. Switch device to GPU compute in render properties. Switch Bake type to Ambient Occlusion or Normals.

**System Information** Card name: AMD Radeon (TM) R9 Fury Series Card name: AMD FirePro W8100 (FireGL V) Operating System: Windows Embedded 8.1 Industry Pro 64-bit (6.3, Build 9600) (9600.winblue_ltsb.150715-0840) Processor: Intel(R) Core(TM) i7-5820K CPU @ 3.30GHz (12 CPUs), ~3.3GHz Memory: 32768MB RAM **Blender Version** Broken: 2.7.6rc1 and 2.7.5.4 **Short description of error** When baking in GPU compute am receiving blown out Ambient Occlusion and Normal maps. Works fine in CPU. when baked with CPU: http://snag.gy/BlvA7.jpg when baked with GPU: http://snag.gy/SsJI3.jpg **Exact steps for others to reproduce the error** Switch mode to cycles render. Add Suzanne smart uv unwrap her. Add image texture in node editor, and create and use a texture. Switch device to GPU compute in render properties. Switch Bake type to Ambient Occlusion or Normals.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @edisto

Added subscriber: @edisto

#48130 was marked as duplicate of this issue

#48130 was marked as duplicate of this issue
Author

I realized after posting that techs might not be familiar with baking. So I attached a premade file that just requires you to hit bake within the render properties under bake tab.

bakeTest2.blend

I'm guessing this bug probably has something to do with my Radeon Fury X.

Edit
The moment I posted that comment I remembered I could go to system and use a single card. After checking It does it on both cards. So the Radeon Fury X and Firepro w8100.

I realized after posting that techs might not be familiar with baking. So I attached a premade file that just requires you to hit bake within the render properties under bake tab. [bakeTest2.blend](https://archive.blender.org/developer/F237500/bakeTest2.blend) I'm guessing this bug probably has something to do with my Radeon Fury X. **Edit** The moment I posted that comment I remembered I could go to system and use a single card. After checking It does it on both cards. So the Radeon Fury X and Firepro w8100.

Added subscriber: @Sergey

Added subscriber: @Sergey

Can confirm OpemCL is producing totally wrong result. Not totally sure yet why, will need to have a closer look.

Can confirm OpemCL is producing totally wrong result. Not totally sure yet why, will need to have a closer look.
Sergey Sharybin self-assigned this 2015-09-23 12:19:23 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

Findings so far:

  • Baking with AA sample 1 works ok, only with multiple samples there is a problem.
  • Adding clFinish() between baking samples does not solve the issue (though we should add it)
  • Marking the output memory as MEM_READ_WRITE does not solve the issue (though we should do that)

Commenting out some parts of the code in the kernel seems to make it work, though I'm not sure if that's avoiding some kind of race condition, working around a compiler bug, or something else.

Findings so far: * Baking with AA sample 1 works ok, only with multiple samples there is a problem. * Adding `clFinish()` between baking samples does not solve the issue (though we should add it) * Marking the output memory as `MEM_READ_WRITE` does not solve the issue (though we should do that) Commenting out some parts of the code in the kernel seems to make it work, though I'm not sure if that's avoiding some kind of race condition, working around a compiler bug, or something else.

Added subscriber: @VeloFX

Added subscriber: @VeloFX

This issue was referenced by d2bb0e660b

This issue was referenced by d2bb0e660bdec00164a9fc72d145e308fb723d16

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@78ab79ade6

This issue was referenced by blender/cycles@78ab79ade6779149556c0aa11101cd7fb70375f4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46207
No description provided.