Fix T46207: Slow OpenCL GPU bake and blown out baking Cycles render